--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,9 @@ nav li {
 }
 
 .products img {
-  padding: 10px;
+  object-fit: contain;
+  width: 100px;
+  height: 100px;
 }
 
 /* SUBMIT FORM */
